--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,13 @@
-<p>login works!</p>
+<form method="POST" class="form">
+  <h1>Ingresar al Sistema</h1>
+  <input type="text" name="email" id="name" [(ngModel)]="email" required />
+  <input
+    type="password"
+    name="password"
+    id="password"
+    [(ngModel)]="password"
+    required
+  />
+
+  <button type="submit" (click)="login()">Login</button>
+</form>
