--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,13 +1,15 @@
-<form method="POST" class="form">
-  <h1>Ingresar al Sistema</h1>
-  <input type="text" name="email" id="name" [(ngModel)]="email" required />
-  <input
-    type="password"
-    name="password"
-    id="password"
-    [(ngModel)]="password"
-    required
-  />
+<div class="parent">
+  <div class="div1"> </div>
+  <div class="div2"> </div>
+  <div class="div3"> </div>
+  <div class="div4">
+    <form method="POST" class="form">
+      <h1>Ingresar al Sistema</h1>
+      <input type="text" name="email" id="name" [(ngModel)]="email" required />
+      <input type="password" name="password" id="password" [(ngModel)]="password" required />
 
-  <button type="submit" (click)="login()">Login</button>
-</form>
+      <button type="submit" (click)="login()">Login</button>
+    </form>
+  </div>
+  <div class="div5"> </div>
+</div>
