--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,13 +6,22 @@
     <div class="card" style="width: 18rem;">
       <form method="POST" class="form">
         <h1>Ingresar al Sistema</h1>
-        <div class="mb-3">
-          <input type="email" class="form-control" name="email" id="name" [(ngModel)]="email" required />
-        </div>
-        <div class="mb-3">
-          <input type="password" class="form-control" name="password" id="password" [(ngModel)]="password" required />
-        </div>
-        <button type="submit" (click)="login()">Login</button>
+        <div class="mb-3 form-group">
+          <label for="Email" class="form-label">Email
+              address - Username</label>
+          <input formControlName="user" type="email" class="form-control" type="text" 
+          id="Email name">
+          <div id="emailHelp" class="form-text">We'll never share
+              your
+              email with anyone else.</div>
+      </div>
+      <div class="mb-3 form-group">
+          <label>Password</label>
+          <input type="password" formControlName="password" class="form-control" id="Password">
+      </div>
+      <div class="list-group">
+          <button type="submit" class="btn button-login" data-bs-dismiss="modal">Login</button>
+      </div>
       </form>
     </div>
   </div>
