--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -5,23 +5,9 @@
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 }
-
-.div1 {
-    grid-area: 1 / 1 / 2 / 6;
-}
-
-.div2 {
-    grid-area: 2 / 1 / 6 / 2;
-}
-
-.div3 {
-    grid-area: 2 / 5 / 6 / 6;
-}
-
-.div4 {
-    grid-area: 3 / 3 / 4 / 4;
-}
-
-.div5 {
-    grid-area: 5 / 2 / 6 / 5;
-}
+    
+.div1 { grid-area: 1 / 1 / 2 / 6; }
+.div2 { grid-area: 2 / 1 / 6 / 2; }
+.div3 { grid-area: 2 / 5 / 6 / 6; }
+.div4 { grid-area: 2 / 2 / 5 / 5; }
+.div5 { grid-area: 5 / 2 / 6 / 5; }
