--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,22 +1,40 @@
+<br />
 <div class="parent">
-  <div class="div1"> </div>
-  <div class="div2"> </div>
-  <div class="div3"> </div>
-  <div class="div4">
-    <div class="card" style="width: 18rem;">
-      <form method="POST" class="form">
-        <h1>Ingresar al Sistema</h1>
-        <div class="mb-3 form-group">
-          <input type="email" class="form-control" name="email" id="name" [(ngModel)]="email" required>
+  <div class="form">
+    <div class="card" style="width: 24rem;">
+      <div class="card-body">
+        <form>
+          <h1>Ingresar al Sistema</h1>
+          <hr />
+          <div class="mb-3 form-group">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              name="email"
+              id="name"
+              [(ngModel)]="email"
+              required
+            />
+          </div>
+          <div class="mb-3 form-group">
+            <label for="password">Contraseña</label>
+            <input
+              type="password"
+              class="form-control"
+              name="password"
+              id="password"
+              [(ngModel)]="password"
+              required
+            />
+          </div>
+          <div class="list-group">
+            <button type="button" class="btn btn-info" (click)="login()">
+              Login
+            </button>
+          </div>
+        </form>
       </div>
-      <div class="mb-3 form-group">
-          <input type="password" class="form-control" name="password" id="password" [(ngModel)]="password" required >
-      </div>
-      <div class="list-group">
-          <button type="submit" class="btn button-login" data-bs-dismiss="modal">Login</button>
-      </div>
-      </form>
     </div>
   </div>
-  <div class="div5"> </div>
 </div>
