--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,51 @@
-<p>register works!</p>
+<br />
+<div class="parent">
+  <div class="form">
+    <div class="card" style="width: 24rem;">
+      <div class="card-body">
+        <form>
+          <h1>Registrar</h1>
+          <hr />
+          <div class="mb-3 form-group">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              name="email"
+              id="name"
+              [(ngModel)]="email"
+              required
+            />
+          </div>
+          <div class="mb-3 form-group">
+            <label for="password">Contraseña</label>
+            <input
+              type="password"
+              class="form-control"
+              name="password"
+              id="password"
+              [(ngModel)]="password"
+              required
+            />
+          </div>
+          <div class="mb-3 form-group">
+            <label for="passwordConfirm">Confirmar Contraseña</label>
+            <input
+              type="passwordConfirm"
+              class="form-control"
+              name="passwordConfirm"
+              id="passwordConfirm"
+              [(ngModel)]="passwordConfirm"
+              required
+            />
+          </div>
+          <div class="list-group">
+            <button type="button" class="btn btn-info" (click)="register()">
+              Registrar
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
