--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,11 @@
+.parent {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
 .form {
+  grid-area: 1 / 3 / 3 / 4;
 }
