--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,10 +10,11 @@
             <label for="email">Email</label>
             <input
               type="email"
-              class="form-control"
+              class="text"
               name="email"
               id="name"
               [(ngModel)]="email"
+              placeholder="Email"
               required
             />
           </div>
@@ -21,15 +22,16 @@
             <label for="password">Contraseña</label>
             <input
               type="password"
-              class="form-control"
+              class="text"
               name="password"
               id="password"
               [(ngModel)]="password"
+              placeholder="Password"
               required
             />
           </div>
           <div class="list-group">
-            <button type="button" class="btn btn-info" (click)="login()">
+            <button type="button" class="btn button-login" (click)="login()">
               Login
             </button>
           </div>
